# batching_dataframe

./: .gitignore  README.MD  batching_module.py  main.ipynb  main.py  pyproject.toml  test_batching.py
