[tool.poetry]
name = "batching-dataframe"
version = "0.1.0"
description = ""
authors = ["Abrak98 <1998.maks1@gmail.com>"]
readme = "README.md"
packages = [{include = "batching_dataframe"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pytest = "^8.2.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.5"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
